product_docs/docs/edbctl/1.2/edbctl_image_pull_secret.mdx
---
title: edbctl image-pull-secret
navTitle: edbctl image-pull-secret
description: Use the edbctl utility to manage pull secrets used in the bootstrapping process for Hybrid Manager.
---

This command helps to manage pull secrets used in the bootstrapping process of Hybrid Manager (HM).

## Commands

`edbctl image-pull-secret` command has the following options available:

-   [edbctl image-pull-secret create](edbctl_image_pull_secret.mdx#edbctl-image-pull-secret-create) — Create or update the Kubernetes namespaces and AssetPullSecrets.
-   [edbctl image-pull-secret list](edbctl_image_pull_secret.mdx#edbctl-image-pull-secret-list) — Lists the Kubernetes namespaces and AssetPullSecrets

### edbctl image-pull-secret create

Create or update the necessary Kubernetes namespaces and AssetPullSecrets using the provided credentials to prepare for HM bootstrapping. Use `--force` if you need to update existing secrets with new credentials.

```
edbctl image-pull-secret create --username <username> --password <password> --registry <registry> [options]
```

Where `options` are:

```
    --username string   Registry username (required).
    --password string   Registry password (required).
    --registry string   Container Registry (required). The URL of the container registry.
    --operator-username string   EDB Postgres AI Operator registry username (optional).
    --operator-password string   EDB Postgres AI Operator registry password (optional).
    --operator-registry string   EDB Postgres AI Operator container registry (optional).
    --force                      Force update of existing secrets.
-h, --help              Help for create.
```

This example shows how to create a Kubernetes namespace and AssetPullSecret:

```
edbctl image-pull-secret create --username <username> --password <password> --registry <registry>
```

### edbctl image-pull-secret list

Retrieves and lists the Kubernetes namespaces and AssetPullSecrets used in HM bootstrapping.

```
edbctl image-pull-secret list [options]
```

Where `options` are:

```
-h, --help help for list command
```
